--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello World
+<!doctype html>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <title>Qwantum</title>
+        <style>
+            html,
+            body {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                font-family: Helvetica, Arial, sans-serif;
+                font-size: 14px;
+                color: #999;
+            }
+
+            #content {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 250px;
+                height: 250px;
+                margin: -125px 0 0 -125px;
+            }
+
+            #content img {
+                float: left;
+                width: 250px;
+                height: 250px;
+            }
+            #content span {
+                margin-top: 30px;
+                float: left;
+                text-align: center;
+                width: 100%;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="content">
+            <img src="logo.png" alt="Qwantum" />
+            <span>contact@qwantum.fr - Stéphane PY</span>
+        </div>
+    </body>
+</html>
